[gd_scene load_steps=22 format=2]

[ext_resource path="res://images/Tileset 1.png" type="Texture" id=1]
[ext_resource path="res://images/endery tileset.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://pixelated-loveNew.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://pickUp.gd" type="Script" id=6]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://Ghost.tscn" type="PackedScene" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "endery tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "endery tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 160, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "endery tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tileset 1.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tileset 1.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 128, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0.303314, 0.410004 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 30.5028
height = 1.29517

[sub_resource type="DynamicFont" id=8]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 221.013, 112.539 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 32.1096, 7.94281 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8.91693, 9.6618 )

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 36
outline_size = 1
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -349.517
margin_top = -89.0261
margin_right = 1128.48
margin_bottom = 858.974
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 0, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 0, 0, 131072, 0, 0, 131073, 3, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 3, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 3, 0, 131083, 0, 0, 131084, 3, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 3, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 3, 0, 131094, 0, 0, 196608, 0, 0, 196609, 3, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 3, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 3, 0, 196619, 0, 0, 196620, 3, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 3, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 3, 0, 196630, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 0, 0, 327680, 0, 0, 327681, 3, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 3, 0, 327686, 0, 0, 327687, 3, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 3, 0, 327696, 0, 0, 327697, 3, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 3, 0, 327702, 0, 0, 393216, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 0, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 0, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 0, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 3, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 3, 0, 458763, 0, 0, 458764, 3, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 3, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 3, 0, 524294, 0, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 0, 0, 524305, 3, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 3, 0, 589830, 0, 0, 589831, 3, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 3, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 3, 0, 589840, 0, 0, 589841, 3, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 0, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 0, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 3, 0, 720902, 0, 0, 720903, 3, 0, 720904, 0, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 0, 0, 720911, 3, 0, 720912, 0, 0, 720913, 3, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 3, 0, 786438, 0, 0, 786439, 3, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 3, 0, 786448, 0, 0, 786449, 3, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 3, 0, 851974, 0, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 0, 0, 851985, 3, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 917504, 0, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 0, 0, 917511, 3, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 3, 0, 917520, 0, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 0, 0, 983040, 0, 0, 983041, 3, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 0, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 3, 0, 983062, 0, 0, 1048576, 0, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 0, 0, 1048581, 3, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 3, 0, 1048587, 0, 0, 1048588, 3, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 3, 0, 1048594, 0, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 3, 0, 1114116, 0, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 0, 0, 1114131, 3, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 3, 0, 1179652, 0, 0, 1179653, 3, 0, 1179654, 0, 0, 1179655, 3, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 3, 0, 1179664, 0, 0, 1179665, 3, 0, 1179666, 0, 0, 1179667, 3, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1245184, 0, 0, 1245185, 3, 0, 1245186, 3, 0, 1245187, 3, 0, 1245188, 3, 0, 1245189, 3, 0, 1245190, 0, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245195, 0, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 0, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 0, 0, 1310720, 0, 0, 1310721, 3, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 3, 0, 1310731, 0, 0, 1310732, 3, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 3, 0, 1310742, 0, 0, 1376256, 0, 0, 1376257, 3, 0, 1376258, 3, 0, 1376259, 3, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 3, 0, 1376265, 3, 0, 1376266, 3, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 367.25, 370.643 )
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 368, 336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"Player",
]]
self_modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( 368, 432 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
self_modulate = Color( 1, 0.937255, 0, 1 )
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 7 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 224.0
margin_top = -23.0
margin_right = 540.0
margin_bottom = 14.0
custom_fonts/normal_font = SubResource( 8 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="RichTextLabel" parent="Score"]
margin_left = 96.0
margin_right = 512.0
margin_bottom = 37.0
custom_fonts/normal_font = SubResource( 8 )
text = "XXXXXXXXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life0" type="Sprite" parent="."]
self_modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 13, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="life1" type="Sprite" parent="."]
self_modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 37, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="life2" type="Sprite" parent="."]
self_modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 61, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="life3" type="Sprite" parent="."]
self_modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 85, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="life4" type="Sprite" parent="."]
modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 109, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="fruit0" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 0, 1 )
position = Vector2( 693, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="fruit1" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0.0235294, 1 )
position = Vector2( 669, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="fruit2" type="Sprite" parent="."]
self_modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( 645, 748 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="GhostCage" type="Area2D" parent="."]
position = Vector2( 368, 344 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostCage"]
position = Vector2( 0, 18 )
shape = SubResource( 9 )

[node name="GhostGate" type="Area2D" parent="."]
position = Vector2( 368, 291 )
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostGate"]
position = Vector2( 0, -2 )
shape = SubResource( 16 )
one_way_collision = true

[node name="pickUp" type="Node2D" parent="." groups=[
"pickUp",
]]
position = Vector2( 272, 432 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="pickUp"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 261.203, 102.814, 20.9003, 19.6708 )

[node name="Area2D" type="Area2D" parent="pickUp"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickUp/Area2D"]
shape = SubResource( 10 )

[node name="Ghost" parent="." instance=ExtResource( 8 )]
position = Vector2( 368, 272 )
collision_mask = 0

[node name="Ghost2" parent="." instance=ExtResource( 8 )]
position = Vector2( 304.957, 367.313 )
collision_mask = 0

[node name="Ghost3" parent="." instance=ExtResource( 8 )]
position = Vector2( 431.356, 336.19 )
collision_mask = 0

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 368, 432 )

[node name="GhostSpawn" type="Position2D" parent="."]
position = Vector2( 368, 368 )

[node name="GhostExit" type="Position2D" parent="."]
position = Vector2( 368, 272 )

[node name="GameOverText" type="RichTextLabel" parent="."]
visible = false
margin_left = 209.0
margin_top = 216.0
margin_right = 564.0
margin_bottom = 445.0
custom_fonts/normal_font = SubResource( 14 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="GameOverText"]
self_modulate = Color( 0, 1, 0.0627451, 1 )
margin_left = 85.0
margin_top = 110.0
margin_right = 231.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 15 )
text = "REPLAY"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="GhostCage" to="." method="_on_GhostCage_body_entered"]
[connection signal="body_exited" from="GhostCage" to="." method="_on_GhostCage_body_exited"]
[connection signal="body_entered" from="pickUp/Area2D" to="pickUp" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="GameOverText/ReplayButton" to="." method="_on_ReplayButton_pressed"]
